<resources>
    <string name="app_name">PaintApplication</string>
    <string name="button_new">New</string>
    <string name="button_brush">Brush</string>
    <string name="button_erase">Erase</string>
    <string name="button_save">Save</string>
    <string name="button_undo">Undo</string>
    <string name="button_redo">redo</string>
    <string name="button_circle_stamp">Circle Stamp</string>
    <string name="paint">Paint</string>
    <string name="smallB">Small</string>
    <string name="medB">Medium</string>
    <string name="largeB">Large</string>
    <string name="button_text">Text</string>
</resources>
